@@ -202,6 +202,8 @@
 
       \item \code{all.equal()} gets a method for \code{environment}s and
       \code{refClass}es.
+
+      \item \code{identical()} now also looks at the S4 bit.
     }
   }
 }
